Bug 155344 - Accept/reject changes to table columns in the local menu of a table cell.
Summary: Accept/reject changes to table columns in the local menu of a table cell.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-05-16 07:55 UTC by NISZ LibreOffice Team
Modified: 2023-06-23 08:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-05-16 07:55:31 UTC
Description:
Accept/reject changes to table columns in the local menu of a table cell.

Steps to Reproduce:
1. Insert a 3x3 table
2. Edit -> track changes -> Record ON (and show ON)
3. Delete a column with delete column button
4. Right clikk in the columns


Actual Results:
The accept/reject option does not appear in the local menu of the table cell.

Expected Results:
The accept/reject option will be displayed in the local menu of the table cell.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6f1534940ac12ff8e46f4782e18cfb6cf585da39
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 Commit Notification 2023-06-06 21:20:43 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/52f70f04bdc586a072141e069d451a979c5f4cb7

tdf#155344 sw tracked table column: 1-click Accept/Reject

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 NISZ LibreOffice Team 2023-06-23 08:34:06 UTC
Verified in:
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 986c2d86a7b53a6599d014db7327f47cb33d4fea
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded