tdf#155344 sw tracked table column: 1-click Accept/Reject

Now context menu of a changed table column shows Accept Change/
Reject Change menu items, which accept or reject
the deletion or insertion of the table column(s).
Also Accept Change/Reject Change icons of the Track Changes
toolbar are enabled, and do the same, if the cursor is not
before or in a tracked change.

Add the following labels to the Undo actions:

"Accept change: Column Inserted"
"Accept change: Column Deleted"
"Reject change: Column Inserted"
"Reject change: Column Deleted"

Follow-up to commit ffd8d20d368a885d6d786749278fa438573227a7
"tdf#150673 sw xmloff: import/export tracked table column".

Change-Id: Idff570dfcf8c3ce35b6223f801608779bf1cd28e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152626
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>